[package]
name = "rtiny"
version = "2.0.1"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple CLI tool for short urls."
repository = "https://github.com/DemwE/rtiny"
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
colorful = "0.2.2"
reqwest = {version = "0.11.21", features = ["blocking", "json", "stream"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = {version = "1.32.0" , features = ["full"]}

