[package]
name = "rtiny"
version = "2.2.1"
authors = ["Mateusz Czarnecki (DemwE)"]
description = "A simple CLI tool for short urls."
repository = "https://github.com/DemwE/rtiny"
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.8", features = ["derive"]}
colorful = { version = "0.2.2" }
reqwest = {version = "0.11.22", features = ["blocking", "json", "stream"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = {version = "1.34.0" , features = ["full"]}
log = { version = "0.4.20"}
env_logger = { version = "0.10.1"}

